# DJangoTripReminder

./: pyproject.toml
ReminderProject/: manage.py
ReminderProject/ReminderProject/: asgi.py  settings.py  urls.py  wsgi.py
ReminderProject/reminder/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ReminderProject/reminder/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py
ReminderProject/reminder/static/css/: main_page.css  register_and_sign_in.css  register_page.css
ReminderProject/reminder/templates/reminder/: create_reminder.html  main_page.html  profile.html  register_page.html  sign_in_page.html
